--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dio: ^4.0.6
   common_utils: ^2.1.0
   fluttertoast: ^8.1.1
+  fluro: ^2.0.4
 
 dev_dependencies:
   flutter_test:
